syntax = "proto3";
package raftservice;

import "eraftpb.proto";

service RaftService {
  rpc ChangeConfig(eraftpb.ConfChange) returns (RaftServiceResponse) {}
  rpc SendRaftMessage(eraftpb.Message) returns (RaftServiceResponse) {}
  rpc RequestServiceProposal(Proposal) returns (RaftServiceResponse) {}
}

enum ResultCode {
  Ok            = 0;
  Error         = 1;
  WrongLeader   = 2;
  NoLeader      = 3;
}

message Proposal {
  bytes inner = 1;
}

message RaftServiceResponse{
  ResultCode code = 1;
  bytes data = 2;
}
